# Basics-Of-CPP

./: Jenkinsfile
all_unknown/built_in_functions/: FILE.cpp  aligns.cpp  (+8 more)
boost/: boost.geany  projects
cmake/tutorial/second/: CMakeLists.txt  main.cpp  version.cpp  version.h
cmake/tutorial/third/: CMakeLists.txt  config.h.in  version.cpp
cmake/tutorial/third/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h  example
doxygen/: main.cpp
firstCppCourse/: DataTypes.cpp  IfElseStatements.cpp  InputChars.cpp  a.out  datatypes  doWhilePin.cpp  dynamic_array.cpp  fil.cpp  firstFunction.cpp  forLoopFactorialCalc.cpp  functionsSignaturesTest.cpp  genericsAndTemplates.cpp  helloWorld  helloWorld.cpp  inputChars  nestedLoops.cpp  oop_intro.cpp  parametersAndReturnsFunctions.cpp  pointers_and_arrays.cpp  pointers_intro.cpp  rectangleDrawerConsole.cpp  recursiveFactorial.cpp  return_multiple_values.cpp  reversingNumberWhileLoop.cpp  switchCases.cpp  switchFebruaryDays.cpp  triangleDrawer.cpp  void_pointer.cpp  whileLoop.cpp
firstProgram/: helloWorld.cpp  helloworld
gdb/: hello.cpp
gtest/: hello.cpp  triangle.cpp  triangle.h  triangle_test.cpp
other-small-sources/: creating-objects.cpp  nooby_mistakes.cpp  pointer  pointer_memory.cpp  sizeof  sizeof.cpp  try_char  try_char.cpp
presentations/: Cpp_std_info.pptx  cpp_constructors.pptx  cpp_containers_std.pptx  cpp_iostreams.pptx  cpp_regex.pptx
python/: python.cpp
sfml-examples/: try  try.cpp
sfml-examples/untitled/: CMakeLists.txt  main.cpp
sql_try/: file  first.cpp  sql.cpp  sql_another.cpp
(+412 files in other folders)
